Fixed: nav bar dropdown alignment

--- a/frontend/src/nav.scss
+++ b/frontend/src/nav.scss
@@ -87,7 +87,6 @@ nav.nav {
 
   &.active {
     display: block;
-    right: 10%;
   }
 }
 
